<resources>
    <string name="app_name">AfriVac</string>
    <string name="azeez_adeleke">Azeez Adeleke</string>
    <string name="my_account">My Account</string>
    <string name="nigeria">Nigeria</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="language">Language</string>
    <string name="my_destinations">My Destinations</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="saved_destination">Saved Destination</string>
    <string name="password">Password</string>
    <string name="user_image">User image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="_234_8012345678">+234 8012345678</string>
    <string name="back_arrow">back arrow</string>
    <string name="azeez_hng_com">Azeez@hng.com</string>
    <string name="male">Male</string>
    <string name="english">English</string>
    <string name="hidden_password">********</string>
    <string name="apps_logo">logo</string>
    <string name="subtittle">subtittle</string>
    <string name="title">title</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="popular_destination">Popular Destinations</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="support">Support</string>
    <string name="completeBooking">Complete your booking at cocoon luxury</string>
    <string name="hotelName">Cocoon Hotel</string>
    <string name="checkInDetails">Check-in Details</string>
    <string name="checkIn">Check-in</string>
    <string name="checkOut">Check-out</string>
    <string name="calendarIcon">An icon of a calendar</string>
    <string name="bedIcon">An icon of a bed</string>
    <string name="rooms">1 Room</string>
    <string name="guests">1 Guest</string>
    <string name="noOfGuests">Number of Guests</string>
    <string name="noOfRooms">Number of Rooms</string>
    <string name="arrow">A downward facing arrow</string>
    <string name="profileIcon">the user\'s profile picture</string>
    <string name="details">Your Details</string>
    <string name="titlee">Mr</string>
    <string name="fullName">Full Name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="additionalInfo">Enter any additional request/information</string>
    <string name="reserveFor">I\'m making the reservation on behalf of someone else</string>
    <string name="cab">Yes, I\'d like a cab service as well</string>
    <string name="pay">Pay Now</string>
    <string name="or">OR</string>
    <string name="payLater">Pay at Hotel</string>
    <string name="line">A line</string>
    <string name="cocoon_hotel">Cocoon Hotel</string>
    <string name="confirmation">Confirmation</string>
    <string name="room_type">Room Type</string>
    <string name="deluxe_rooms">Deluxe Rooms</string>
    <string name="guest">Guest</string>
    <string name="_2_adults">2 Adults</string>
    <string name="night">Night</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="fri_19_june_2020">Fri 19 June 2020</string>
    <string name="_96_78">(96** **** *** 78)</string>
    <string name="n12_000">N12,000</string>
    <string name="edit_room_details">Edit Room Details</string>
    <string name="sat_19_june_2020">Sat 19 June 2020</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="contact_us">Contact us</string>
    <string name="arrow_down">arrow down</string>
    <string name="back_arrow_button">back arrow button</string>
    <string name="support_text">Support</string>
    <string name="describe_issues">Describe your issue</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="need_more_help">Need more help?</string>
    <string name="contact_us_msg">Tell us more and we\'ll help you</string>
    <string name="feedback">Send feedback</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="find_hotel_text">Find Hotel</string>
    <string name="title_activity_terms_and_conditions">Terms and Conditions</string>
    <string name="afrivac_is_a">Afrivac is a .......</string>
</resources>
