<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|end"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center|end"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_button_sImageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="24dp"
                    android:background="#ffffff"
                    android:contentDescription="@string/back_arrow_button"
                    android:src="@drawable/back_button"
                    android:layout_marginLeft="24dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:layout_weight="8"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_light"
                    android:gravity="center"
                    android:text="@string/support_text"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:id="@+id/profile_picture_iv"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1.25"
                    android:contentDescription="@string/profileIcon"
                    android:ems="10"
                    android:gravity="center"
                    tools:src="@drawable/circle_test"
                    android:layout_marginRight="24dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <SearchView
                    android:id="@+id/describe_edit_text"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:queryHint="Describe your issue"
                    android:background="@drawable/edit_text_corners"
                    android:drawableEnd="@drawable/ic_baseline_search_24"
                    android:fontFamily="@font/poppins_light"
                    android:inputType="textAutoComplete"
                    android:padding="12dp"
                    android:paddingStart="24dp"
                    android:textAlignment="gravity"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:drawableRight="@drawable/ic_baseline_search_24"
                    android:paddingLeft="24dp" />
                <!--<EditText
                    android:id="@+id/describe_edit_text"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:autofillHints="@string/describe_issues"
                    android:background="@drawable/edit_text_corners"
                    android:drawableEnd="@drawable/ic_baseline_search_24"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/describe_issues"
                    android:inputType="textAutoComplete"
                    android:padding="12dp"
                    android:paddingStart="24dp"
                    android:textAlignment="gravity"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />-->
            </LinearLayout>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="12dp"
        android:text="@string/frequently_asked_questions"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginLeft="45dp" />

    <!--TODO: Use recycler view and Adapter to get the support page recycler list.xml here-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/question_and_answer_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:baselineAligned="false"
                android:clipToPadding="false"
                tools:listitem="@layout/support_page_recycler_list_item"
                tools:itemCount="7"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginBottom="@dimen/fab_margin"
                android:text="@string/need_more_help"
                android:textColor="#3913B8"
                android:textSize="16sp"
                android:layout_marginLeft="45dp" />

            <RelativeLayout
                android:id="@+id/contact_us_relative_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/contact_us_background"
                android:padding="@dimen/fab_margin">

                <ImageView
                    android:id="@+id/contact_us_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/email"
                    android:src="@drawable/ic_baseline_mail_outline_24"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_toEndOf="@id/contact_us_iv"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/contact_us"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/contact_us_iv" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="29dp"
                    android:layout_toEndOf="@id/contact_us_iv"
                    android:text="@string/contact_us_msg"
                    android:textColor="#000000"
                    android:textSize="10sp"
                    android:fontFamily="@font/poppins_light"
                    tools:ignore="RelativeOverlap"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/contact_us_iv" />

                <ImageView
                    android:id="@+id/contact_us_open_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:contentDescription="@string/contact_us"
                    android:src="@drawable/ic_baseline_open_in_new_24"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/fab_margin" />
            </RelativeLayout>


            <TextView
                android:id="@+id/feedback_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="@dimen/fab_margin"
                android:drawableStart="@drawable/ic_baseline_feedback_24"
                android:elegantTextHeight="true"
                android:fontFamily="@font/poppins_light"
                android:text="@string/feedback"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginLeft="45dp"
                android:drawableLeft="@drawable/ic_baseline_feedback_24"
                android:gravity="end" />


            <TextView
                android:id="@+id/terms_and_condition_textView"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="45dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="@dimen/fab_margin"
                android:drawableStart="@drawable/ic_baseline_open_in_new_24"
                android:elegantTextHeight="true"
                android:fontFamily="@font/poppins_light"
                android:text="@string/terms_and_conditions"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginLeft="45dp"
                android:drawableLeft="@drawable/ic_baseline_open_in_new_24"
                android:gravity="center_horizontal" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>